* Thu, Sep 25, 2003 Jaco Greeff <jaco@linuxminicd.org> 0.5.5-cvs
- Changed README file to include CVS location

* Thu, Sep 25, 2003 Jaco Greeff <jaco@linuxminicd.org> 0.5.5
- Changed input blocksize to compression in mklivecd from 64K to
  224K. This still allows for overflow blocks (i.e. block with no
  compression) to be smaller than the maximum size of 256K,
  whilst allowing for a smaller final iso size (It can be made
  larger, but 224K is safe and should work for all types of blocks)
- Added support for bzloop images (experimental) in both mklivecd
  and the linuxrc scripts (--looptype=<cloop|bzloop> option to
  mklivecd). This (--looptype=bzloop) requires an updated
  cloop-utils providing both the bzloop and {create,extract}_bzfs
  executables (http://www.linuxminicd.org/bzloop/)
- Test for both the mkisofs and create_{compressed_,bz}fs
  executables before using them in mklivecd
- Test that the user indeed has root privledges in mklivecd before
  trying to execure
- Display the "short GPL" in "mklivecd --version"
- If an unknown option is specified (-*) in klivecd, complain
- If a target iso is not specified in mklivecd, display the usage
  info
- Redirect all error messages in mklivecd to stderr
- Only cater for devfs in linuxrc, manually created device should
  be done in mklivecd, not "on-the-fly"
- Chmod /tmp 777 in linuxrc to allow all users write access to it
- Updated the README to contain the mailing list information
- Changes mkisofs -r to -R to preserve user settings in mklivecd
- Moved hwdetect initscript out of /etc/init.d into
  /usr/share/mklivecd/init.d
- Allow hwdetect to be executed from either /usr/sbin (if installed)
  or from the always available /initrd/usr/sbin in /etc/init.d/hwdetect


* Tue, Sep 23, 2003 Jaco Greeff <jaco@linuxminicd.org> 0.5.4
- Added mkisofs to RPM spec (Reported by Tibor Pittich)
- Sync with RPM spec as imported into Mandrake contrib
- Removed locale dependency from initrd size calculation in