@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.3 2003/09/25 08:42:54 jaco Exp $
+# $Id: mklivecd.in,v 1.4 2003/09/26 06:59:47 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -44,7 +44,7 @@ cloopimg=""
 LIVECDISOCLP="livecd.iso.clp"
 loopcmp="create_compressed_fs"
 loopmod="cloop"
-blocksize=229376 # 224K*1024
+blocksize=64
 
 usage () {
 	echo "Usage:" >&2
@@ -54,6 +54,7 @@ usage () {
 	echo "    --help                     Display this message" >&2
 	echo "    --version                  Display script version information" >&2
 	echo "    --verbose                  Be verbose in output" >&2
+	echo "    --blocksize=<size>         Compression blocksize in K (default: 64)" >&2
 	echo "    --exclude-dir=<excludes>   Excludes directories from the final image (1)" >&2
 	echo "    --exclude-file=<excludes>  Excludes files from the final image (1)" >&2
 	echo "    --tmpdir=<tmpdir>          Temp directory for images" >&2
@@ -75,6 +76,7 @@ usage () {
 	echo "" >&2
 	echo "Examples:" >&2
 	echo "    `basename $0` --exclude-dir=\"^/usr/src/RPM ^/root/tmp\" livecd.iso" >&2
+	echo "    `basename $0` --blocksize=224 livecd.iso" >&2
 	echo "" >&2
 	exit 1
 }
@@ -206,9 +208,10 @@ $e"
 			echo "ERROR: 'mkisofs' does not exist on your machine. You need to install the mkisofs package." >&2
 			exit 1
 		fi
+		REALSIZE=`echo $blocksize | awk '{ size = $1*1024; print size; }'`
 		do_cmd "nice -n 19 mkisofs -R -exclude-list $EXCLUDELIST \
 			-hide-rr-moved -cache-inodes -no-bak -pad -v -v -gui $rootdir \
-			| $loopcmp - $blocksize >$LIVECDCLOOPDIR/$LIVECDISOCLP 2>/dev/null"
+			| $loopcmp - $REALSIZE >$LIVECDCLOOPDIR/$LIVECDISOCLP 2>/dev/null"
 		[ -n "$cloopimg" ] && do_cmd "ln $LIVECDCLOOPDIR/$LIVECDISOCLP $cloopimg"
 	fi
 }
@@ -266,6 +269,15 @@ while [ $# -gt 0 ]; do
 			for e in $excludes; do
 				excludefiles="$excludefiles $e"
 			done
+			;;
+
+		--blocksize*)
+			if echo $1 | grep '=' >/dev/null ; then
+				blocksize=`echo $1 | sed 's/^--blocksize=//'`
+			else
+				blocksize=$2
+				shift
+			fi
 			;;
 
 		--kernel*)
